[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lib_dzne_igblastn"
version = "0.2.8"
description = "Libary for using igblastn. "
readme = "README.rst"
license = { file = "LICENSE.txt" }
authors = [{ name = "Johannes", email = "johannes-programming@posteo.org" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
    'simple_tsv>=1.0.0',
    'lib-dzne-filedata>=0.4.4',
    'handle_igblastn>=0.1'
]
requires-python = ">=3.11"

[project.urls]
Source = "https://github.com/johannes-programming/lib_dzne_igblastn"
Download = "https://pypi.org/project/lib-dzne-igblastn/#files"
