[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lib_dzne_igblastn"
version = "0.2.9"
description = "Libary for using igblastn. "
readme = "README.rst"
authors = [{ name = "Johannes", email = "johannes-programming@mailfence.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = [
    'BASE',
    'DZNE',
]
dependencies = [
    'simple_tsv>=1.0',
    'lib_dzne_filedata>=0.4.4',
    'handle_igblastn>=0.1'
]
requires-python = ">=3.11"

[project.license]
file = "LICENSE.txt"

[project.urls]
Source = "https://github.com/johannes-programming/lib_dzne_igblastn"
Download = "https://pypi.org/project/lib-dzne-igblastn/#files"
