[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lib-dzne-igblastn"
version = "0.1.2"
description = "Libary for using igblastn. "
license = { file = "LICENSE" }
authors = [{ name = "Johannes Horler", email = "johannes.horler@dzne.de" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
    'lib-dzne-tsv>=0.1.4',
]
requires-python = ">=3.11"

